add DemoJacobiSequential to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,9 +148,9 @@ SET(DEMO_DIR demo/td)
 ## -- add executable: DemoJacobiSequential
 ## ------------------------------------------------------------------------------
 
-#SET(DEMO_NAME DemoJacobiSequential)
-#ADD_EXECUTABLE(${DEMO_NAME} ${DEMO_DIR}/${DEMO_NAME}.cpp)
-#TARGET_LINK_LIBRARIES(${DEMO_NAME} ${PROJECT_NAME} ${MPI_LIBRARIES})
+SET(DEMO_NAME DemoJacobiSequential)
+ADD_EXECUTABLE(${DEMO_NAME} ${DEMO_DIR}/${DEMO_NAME}.cpp)
+TARGET_LINK_LIBRARIES(${DEMO_NAME} ${PROJECT_NAME} ${MPI_LIBRARIES})
 
 
 ## ------------------------------------------------------------------------------
